--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <ul>
         <li> <a href="#"><i class="fa-solid fa-heart"></i></a></li>
         <li><a href="#"><i class="fa-solid fa-bookmark"></i></a></li>
-        <li><a href="#"><i class="fa-solid fa-star"></i></a></li>
+        <li><a href="actorsGallery.html" target="_blank"><i class="fa-solid fa-star"></i></a></li>
     </ul>
 
 
